--- a/.gitmodules
+++ b/.gitmodules
@@ -2,38 +2,48 @@
 	path = packages/silex/silex_maya/beta.0.1.0
 	url = https://github.com/ArtFXDev/silex_maya.git
 	branch = beta
+  ignore = dirty
 [submodule "packages/silex/silex_maya/prod.0.1.0"]
 	path = packages/silex/silex_maya/prod.0.1.0
 	url = https://github.com/ArtFXDev/silex_maya.git
 	branch = prod
+  ignore = dirty
 [submodule "packages/silex/silex_houdini/beta.0.1.0"]
 	path = packages/silex/silex_houdini/beta.0.1.0
 	url = https://github.com/ArtFXDev/silex_houdini.git
 	branch = beta
+  ignore = dirty
 [submodule "packages/silex/silex_houdini/prod.0.1.0"]
 	path = packages/silex/silex_houdini/prod.0.1.0
 	url = https://github.com/ArtFXDev/silex_houdini.git
 	branch = prod
+  ignore = dirty
 [submodule "packages/silex/silex_client/prod.0.1.0"]
 	path = packages/silex/silex_client/prod.0.1.0
 	url = https://github.com/ArtFXDev/silex_client.git
 	branch = prod
+  ignore = dirty
 [submodule "packages/silex/silex_client/beta.0.1.0"]
 	path = packages/silex/silex_client/beta.0.1.0
 	url = https://github.com/ArtFXDev/silex_client.git
 	branch = beta
+  ignore = dirty
 [submodule "packages/silex/silex_nuke/beta.0.1.0"]
 	path = packages/silex/silex_nuke/beta.0.1.0
 	url = https://github.com/ArtFXDev/silex_nuke.git
 	branch = beta
+  ignore = dirty
 [submodule "packages/silex/silex_nuke/prod.0.1.0"]
 	path = packages/silex/silex_nuke/prod.0.1.0
 	url = https://github.com/ArtFXDev/silex_nuke.git
 	branch = prod
+  ignore = dirty
 [submodule "packages/softwares/tractor/0.1.0"]
 	path = packages/softwares/tractor/0.1.0
 	url = https://github.com/ArtFXDev/tractor_lib.git
 	branch = main
+  ignore = dirty
 [submodule "packages/silex/aiogazu/1.0.0"]
 	path = packages/silex/aiogazu/1.0.0
 	url = https://github.com/ArtFXDev/aiogazu.git
+  ignore = dirty
