--- a/packages/tools/texturetotx/1.0.0/silex_maya/config/action/texturetotx.yml
+++ b/packages/tools/texturetotx/1.0.0/silex_maya/config/action/texturetotx.yml
@@ -2,9 +2,66 @@ texturetotx:
   thumbnail: "textureBakeSet.svg"
   label: "Text to tx"
   steps:
+    check_references:
+      label: "Check references"
+      index: 30
+      commands:
+        cleanup:
+          label: "Cleanup scene"
+          path: "silex_maya.commands.cleanup_scene.CleanupScene"
+        get_references:
+          label: "Get referenced files"
+          path: "silex_maya.commands.get_references.GetReferences"
+        conform_references:
+          label: "Conform references found"
+          path: "silex_client.commands.iterate_action.IterateAction"
+          parameters:
+            values:
+              value: !command-output "check_references:get_references:file_paths"
+              hide: true
+            actions:
+              - "conform"
+            categories:
+              - "action"
+            parameter: "setup:get_conform_output:file_paths"
+            label_key: "file_paths"
+            output: "setup:append_conform_actions"
+
+    conform_references:
+      label: "Repath references"
+      index: 40
+      commands:
+        repath_attributes:
+          label: "Repath attributes"
+          path: "silex_maya.commands.set_references.SetReferences"
+          tooltip: "Set the new path on the attributes"
+          parameters:
+            attributes:
+              value: !command-output "check_references:get_references:attributes"
+              hide: true
+            values:
+              value: !command-output "check_references:conform_references"
+              hide: true
+
     texturetotx:
       index: 50
       commands:
+        get_references:
+          label: "Get referenced files"
+          path: "silex_maya.commands.get_references.GetReferences"
+          parameters:
+            skip_existing_conformed_file: false
+            included_extensions: 
+              - tiff
+              - png
+              - jpeg
+              - jpg
+              - exr
+              - tga
         texturetotx:
           path: "texturetotx.commands.texturetotx.TextureToTx"
           ask_user: True
+          parameters:
+            file_paths:
+              value: !command-output "texturetotx:get_references"
+              hide: true
