--- a/packages/tools/texturetotx/1.0.0/platform/silex_maya/config/action/texturetotx.yml
+++ b/packages/tools/texturetotx/1.0.0/platform/silex_maya/config/action/texturetotx.yml
@@ -12,6 +12,7 @@ texturetotx:
             skip_existing_conformed_file: false
             included_extensions: 
               - .tiff
+              - .tif
               - .png
               - .jpeg
               - .jpg
