--- a/packages/5rn/watchers/config/submit/maya.yml
+++ b/packages/5rn/watchers/config/submit/maya.yml
@@ -8,6 +8,7 @@ maya: !inherit
             parameters:
               blade_blacklist:
                 value:
+                  - DONOTUSE
                   - BUG
                   - md6-2016-011
                   - md7-2016-045
